--- a/index.html
+++ b/index.html
@@ -681,7 +681,7 @@
     
     <!-- WHASTAPP BOOKING BUTTON ABOVE SEARCH (OPTIMIZATION #1) -->
     <div class="whatsapp-cta">
-      <h4>🚀 GET BOOKED IN 15 SECONDS</h4>
+      <h4>🚀 GET BOOKED IN 15 MINUTES</h4>
       <a href="https://wa.me/27630367794?text=Hi+LogisticsRent%2C+I+need+help+finding+the+best+option">
         💬 WhatsApp Us While You Search (Get reply in 60 sec)
       </a>
@@ -2059,4 +2059,5 @@
 </body>
 </html>
    
+
       
