--- a/index.html
+++ b/index.html
@@ -837,7 +837,7 @@
           <strong>🖨️ SCAN QR AT MALL OF AFRICA:</strong><br>
           • @Home Furniture (Checkout)<br>
           • Builders Hardware (Loading Bay)<br>
-          • <span style="color:var(--green);">Scan → Get R50 OFF your first booking</span>
+          • <span style="color:var(--green);">Scan → Get R50 OFF your first booking</qr-sectionTIONTIONhininutesinutesn>
         </div>
   di      <button class="compare-button" onclick="addToCompare('listing3')">➕ Add to Compare</button>
       </div>
@@ -1075,7 +1075,7 @@
         1. Tap any trust feature above<br>
         2. WhatsApp opens with pre-filled messages<br>
         3. Fill in your details & send (add photos if needed)<br>
-        4. We process your dominutes within 20-30 minutes      
+        4. We will process your documents within 20-30 minutes<br>
       </div>
     </div>
     
@@ -2060,5 +2060,6 @@
    
 
       
+
 
 
